// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch generates a label if a child prop of text is supplied 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-1 {
  width: 36px;
  height: 22px;
  fill: #757575;
  background-color: #757575;
  border-radius: 11px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
}

.emotion-0 {
  height: 18px;
  width: 18px;
  background-color: #FFFFFF;
  border-radius: 50%;
  display: block;
  position: absolute;
  top: 2px;
  left: 2px;
  -webkit-transition: left 200ms ease-in-out;
  transition: left 200ms ease-in-out;
}

.emotion-2 {
  width: 36px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  margin-left: 10px;
  line-height: 22px;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-0"
      />
    </div>
    <input
      checked={false}
      className="emotion-2"
      id={1}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <label
    className="emotion-4"
    htmlFor={1}
  >
    Test label
  </label>
</div>
`;

exports[`Switch incorporates user style if passed 1`] = `
.emotion-1 {
  width: 36px;
  height: 22px;
  fill: #757575;
  background-color: #757575;
  border-radius: 11px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
}

.emotion-0 {
  height: 18px;
  width: 18px;
  background-color: #FFFFFF;
  border-radius: 50%;
  display: block;
  position: absolute;
  top: 2px;
  left: 2px;
  -webkit-transition: left 200ms ease-in-out;
  transition: left 200ms ease-in-out;
}

.emotion-2 {
  width: 36px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: pink;
}

.emotion-3 {
  position: relative;
  border: 2px solid purple;
}

.emotion-4 {
  margin-left: 10px;
  line-height: 22px;
  color: green;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-0"
      />
    </div>
    <input
      checked={false}
      className="emotion-2"
      id={1}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <label
    className="emotion-4"
    htmlFor={1}
  >
    Test label
  </label>
</div>
`;

exports[`Switch incorporates user style if passed 2`] = `
.emotion-3 {
  position: relative;
}

.emotion-1 {
  width: 36px;
  height: 22px;
  fill: #757575;
  background-color: #757575;
  border-radius: 11px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
}

.emotion-0 {
  height: 18px;
  width: 18px;
  background-color: #FFFFFF;
  border-radius: 50%;
  display: block;
  position: absolute;
  top: 2px;
  left: 2px;
  -webkit-transition: left 200ms ease-in-out;
  transition: left 200ms ease-in-out;
}

.emotion-2 {
  width: 36px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  margin-left: 10px;
  line-height: 22px;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-3"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-0"
      />
    </div>
    <input
      checked={false}
      className="emotion-2"
      id={2}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <label
    className="emotion-4"
    htmlFor={2}
  >
    Test label
  </label>
</div>
`;

exports[`Switch renders the correct button type 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-1 {
  width: 36px;
  height: 22px;
  fill: #757575;
  background-color: #757575;
  border-radius: 11px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
}

.emotion-0 {
  height: 18px;
  width: 18px;
  background-color: #FFFFFF;
  border-radius: 50%;
  display: block;
  position: absolute;
  top: 2px;
  left: 2px;
  -webkit-transition: left 200ms ease-in-out;
  transition: left 200ms ease-in-out;
}

.emotion-2 {
  width: 36px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    />
  </div>
  <input
    checked={false}
    className="emotion-2"
    id={1}
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Switch renders the correct selected state 1`] = `
.emotion-3 {
  position: relative;
}

.emotion-1 {
  width: 36px;
  height: 22px;
  fill: #757575;
  background-color: #757575;
  border-radius: 11px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
}

.emotion-0 {
  height: 18px;
  width: 18px;
  background-color: #FFFFFF;
  border-radius: 50%;
  display: block;
  position: absolute;
  top: 2px;
  left: 2px;
  -webkit-transition: left 200ms ease-in-out;
  transition: left 200ms ease-in-out;
}

.emotion-2 {
  width: 36px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    />
  </div>
  <input
    checked={false}
    className="emotion-2"
    id={1}
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Switch renders the correct selected state 2`] = `
.emotion-3 {
  position: relative;
}

.emotion-2 {
  width: 36px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-1 {
  width: 36px;
  height: 22px;
  fill: #43B02A;
  background-color: #43B02A;
  border-radius: 11px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
}

.emotion-0 {
  height: 18px;
  width: 18px;
  background-color: #FFFFFF;
  border-radius: 50%;
  display: block;
  position: absolute;
  top: 2px;
  left: 2px;
  -webkit-transition: left 200ms ease-in-out;
  transition: left 200ms ease-in-out;
  left: 16px;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    />
  </div>
  <input
    checked={true}
    className="emotion-2"
    id={2}
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Switch renders the correct selected state 3`] = `
.emotion-3 {
  position: relative;
}

.emotion-2 {
  width: 36px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-0 {
  height: 18px;
  width: 18px;
  background-color: #FFFFFF;
  border-radius: 50%;
  display: block;
  position: absolute;
  top: 2px;
  left: 2px;
  -webkit-transition: left 200ms ease-in-out;
  transition: left 200ms ease-in-out;
  left: 16px;
}

.emotion-1 {
  width: 36px;
  height: 22px;
  fill: #BDBDBD;
  background-color: #BDBDBD;
  border-radius: 11px;
  position: relative;
  -webkit-transition: background-color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out;
}

<div
  className="emotion-3"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    />
  </div>
  <input
    checked={true}
    className="emotion-2"
    disabled={true}
    id={2}
    onChange={[Function]}
    type="checkbox"
  />
</div>
`;
